@@ -3,6 +3,11 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-04-23 (SVN):
+    * vid.h: Removed the macros VID_LockBuffer(), VID_UnlockBuffer() and
+      VID_HandlePause() and made them into functions for drivers that do
+      not need them.
+
 2012-04-22 (SVN):
     * updated XCode project file from Kristian after the addition of new
       cl_inlude.c source file.
